--- a/src/StoreToHeaven/AddProduct.form
+++ b/src/StoreToHeaven/AddProduct.form
@@ -29,16 +29,17 @@
           <Font name="TH Sarabun New" size="24" style="0"/>
         </Property>
         <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-          <StringArray count="9">
+          <StringArray count="10">
             <StringItem index="0" value="&#xe01;&#xe23;&#xe38;&#xe13;&#xe32;&#xe40;&#xe25;&#xe37;&#xe2d;&#xe01;&#xe15;&#xe31;&#xe27;&#xe40;&#xe25;&#xe37;&#xe2d;&#xe01;"/>
             <StringItem index="1" value="&#xe42;&#xe25;&#xe07;&#xe28;&#xe1e;"/>
-            <StringItem index="2" value="&#xe1e;&#xe27;&#xe07;&#xe2b;&#xe23;&#xe35;&#xe14;&#xe41;&#xe25;&#xe30;&#xe14;&#xe2d;&#xe01;&#xe44;&#xe21;&#xe49;&#xe08;&#xe31;&#xe19;&#xe17;&#xe19;&#xe4c;"/>
-            <StringItem index="3" value="&#xe0a;&#xe38;&#xe14;&#xe44;&#xe17;&#xe22;&#xe18;&#xe23;&#xe23;&#xe21;"/>
-            <StringItem index="4" value="&#xe18;&#xe39;&#xe1b;&#xe41;&#xe25;&#xe30;&#xe40;&#xe17;&#xe35;&#xe22;&#xe19;"/>
-            <StringItem index="5" value="&#xe0a;&#xe38;&#xe14;&#xe2d;&#xe32;&#xe2b;&#xe32;&#xe23;&#xe27;&#xe48;&#xe32;&#xe07;"/>
-            <StringItem index="6" value="&#xe02;&#xe2d;&#xe07;&#xe0a;&#xe33;&#xe23;&#xe48;&#xe27;&#xe22;"/>
-            <StringItem index="7" value="&#xe01;&#xe23;&#xe2d;&#xe1a;&#xe23;&#xe39;&#xe1b;"/>
-            <StringItem index="8" value="&#xe40;&#xe1e;&#xe34;&#xe48;&#xe21;&#xe2a;&#xe34;&#xe19;&#xe04;&#xe49;&#xe32;"/>
+            <StringItem index="2" value="&#xe1e;&#xe27;&#xe07;&#xe2b;&#xe23;&#xe35;&#xe14;"/>
+            <StringItem index="3" value="&#xe14;&#xe2d;&#xe01;&#xe44;&#xe21;&#xe49;&#xe08;&#xe31;&#xe19;&#xe17;&#xe19;&#xe4c;"/>
+            <StringItem index="4" value="&#xe0a;&#xe38;&#xe14;&#xe44;&#xe17;&#xe22;&#xe18;&#xe23;&#xe23;&#xe21;"/>
+            <StringItem index="5" value="&#xe18;&#xe39;&#xe1b;&#xe41;&#xe25;&#xe30;&#xe40;&#xe17;&#xe35;&#xe22;&#xe19;"/>
+            <StringItem index="6" value="&#xe0a;&#xe38;&#xe14;&#xe2d;&#xe32;&#xe2b;&#xe32;&#xe23;&#xe27;&#xe48;&#xe32;&#xe07;"/>
+            <StringItem index="7" value="&#xe02;&#xe2d;&#xe07;&#xe0a;&#xe33;&#xe23;&#xe48;&#xe27;&#xe22;"/>
+            <StringItem index="8" value="&#xe01;&#xe23;&#xe2d;&#xe1a;&#xe23;&#xe39;&#xe1b;"/>
+            <StringItem index="9" value="&#xe40;&#xe1e;&#xe34;&#xe48;&#xe21;&#xe2a;&#xe34;&#xe19;&#xe04;&#xe49;&#xe32;"/>
           </StringArray>
         </Property>
         <Property name="alignmentX" type="float" value="1.0"/>
@@ -95,7 +96,7 @@
         </Property>
       </Properties>
       <AuxValues>
-        <AuxValue name="JavaCodeGenerator_LayoutCodePre" type="java.lang.String" value="JPanel emptyPanel = new JPanel();&#xa;AddWreath wreath = new AddWreath(showAddProduct);&#xa;AddSnackBox boxset = new AddSnackBox(showAddProduct);&#xa;&#xa;emptyPanel.setBackground(new java.awt.Color(153, 255, 204)); &#xa;showAddProduct.add(emptyPanel, &quot;empty&quot;);&#xa;showAddProduct.add(wreath, &quot;wreath&quot;);&#xa;showAddProduct.add(boxset, &quot;snackbox&quot;);"/>
+        <AuxValue name="JavaCodeGenerator_LayoutCodePre" type="java.lang.String" value="JPanel emptyPanel = new JPanel();&#xa;AddWreath wreath = new AddWreath(showAddProduct);&#xa;AddSnackBox boxset = new AddSnackBox(showAddProduct);&#xa;AddFrame frame = new AddFrame(showAddProduct);&#xa;AddOffering offerings = new AddOffering(showAddProduct);&#xa;AddSandalWood sandalW = new AddSandalWood(showAddProduct);&#xa;&#xa;emptyPanel.setBackground(new java.awt.Color(153, 255, 204)); &#xa;showAddProduct.add(emptyPanel, &quot;empty&quot;);&#xa;showAddProduct.add(wreath, &quot;wreath&quot;);&#xa;showAddProduct.add(boxset, &quot;snackbox&quot;);&#xa;showAddProduct.add(frame, &quot;frame&quot;);&#xa;showAddProduct.add(offerings, &quot;offerings&quot;);&#xa;showAddProduct.add(sandalW, &quot;sandalW&quot;);"/>
       </AuxValues>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
