--- a/src/StoreToHeaven/FrameDetail.form
+++ b/src/StoreToHeaven/FrameDetail.form
@@ -92,6 +92,9 @@
     </Component>
     <Component class="javax.swing.JCheckBox" name="deleteCB">
       <Properties>
+        <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+          <Color blue="cc" green="cc" red="ff" type="rgb"/>
+        </Property>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="TH SarabunPSK" size="18" style="0"/>
         </Property>
